cocoa: include tab alert state & crash state in accessible title

This change:
1) Factors out most of BrowserView::GetAccessibleTabLabel into a new helper,
   chrome::AssembleTabAccessibilityLabel
2) Has BrowserView::GetAccessibleTabLabel call the new helper
3) Adds [TabController accessibleTitle] to the Cocoa TabController
4) Has the Cocoa TabView use [TabController accessibleTitle] for the
   accessible title
5) Has [TabController accessibleTitle] call the new helper

Bug: 614922
Change-Id: I94790fea08ba173b893a872fedc278ae5c8b8434
Reviewed-on: https://chromium-review.googlesource.com/602807
Commit-Queue: Elly Fong-Jones <ellyjones@chromium.org>
Reviewed-by: Scott Violet <sky@chromium.org>
Cr-Commit-Position: refs/heads/master@{#492362}
Former-commit-id: b27df3cbe3d78732be49699a07f7ea9a01eb0c35